[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/cube.PNG" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 29.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41, 39 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 515, 300 )
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 0.0392157, 1, 1 )
position = Vector2( 0, -0.499998 )
scale = Vector2( 0.372671, 0.36875 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
